tests/ui/closures/2229_closure_analysis/optimization/edge_case.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/edge_case.rs:20:13
   |
LL |     let c = #[crablangc_capture_analysis] || drop(&m.a.0);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/crablang/crablang/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

error: First Pass analysis includes:
  --> $DIR/edge_case.rs:20:39
   |
LL |     let c = #[crablangc_capture_analysis] || drop(&m.a.0);
   |                                       ^^^^^^^^^^^^^^^
   |
note: Capturing m[Deref,(0, 0),Deref,(0, 0)] -> ImmBorrow
  --> $DIR/edge_case.rs:20:48
   |
LL |     let c = #[crablangc_capture_analysis] || drop(&m.a.0);
   |                                                ^^^^^

error: Min Capture analysis includes:
  --> $DIR/edge_case.rs:20:39
   |
LL |     let c = #[crablangc_capture_analysis] || drop(&m.a.0);
   |                                       ^^^^^^^^^^^^^^^
   |
note: Min Capture m[Deref,(0, 0),Deref] -> ImmBorrow
  --> $DIR/edge_case.rs:20:48
   |
LL |     let c = #[crablangc_capture_analysis] || drop(&m.a.0);
   |                                                ^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `crablangc --explain E0658`.
